output.selectLang = {
  radioEn: 'selectLang_radio_en',
  btnContinue: 'selectLang_btn_continue',
};
