output.video = {
  btnLogin: 'video_btn_login',
  btnCreateLive: 'video_btn_createLive',
};
